beast/src/main/java/edu/pse/beast/toolbox/antlr/booleanexp/FormalPropertyDescriptionParser.java
// Generated from FormalPropertyDescription.g4 by ANTLR 4.7.1
package edu.pse.beast.toolbox.antlr.booleanexp;
import java.util.List;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FormalPropertyDescriptionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, Mult=11, Add=12, Concatenate=13, Intersect=14, Vote=15, Elect=16, 
		NotEmpty=17, Votesum=18, VotesumUnique=19, ClosedBracket=20, OpenBracket=21, 
		Quantor=22, Split=23, Permutation=24, ValueAssign=25, ComparisonSymbol=26, 
		BinaryRelationSymbol=27, Integer=28, Identifier=29, Whitespace=30, Newline=31, 
		BlockComment=32, LineComment=33;
	public static final int
		RULE_booleanExpList = 0, RULE_booleanExpListElement = 1, RULE_votingListChangeExp = 2, 
		RULE_votingListChangeContent = 3, RULE_votingTupelChangeExp = 4, RULE_candidateListChangeExp = 5, 
		RULE_booleanExp = 6, RULE_binaryRelationExp = 7, RULE_addedContentExp = 8, 
		RULE_notEmptyExp = 9, RULE_notEmptyContent = 10, RULE_voteEquivalents = 11, 
		RULE_concatenationExp = 12, RULE_splitExp = 13, RULE_permutationExp = 14, 
		RULE_intersectExp = 15, RULE_intersectContent = 16, RULE_tuple = 17, RULE_tupleContent = 18, 
		RULE_quantorExp = 19, RULE_notExp = 20, RULE_comparisonExp = 21, RULE_typeExp = 22, 
		RULE_numberExpression = 23, RULE_typeByPosExp = 24, RULE_voterByPosExp = 25, 
		RULE_candByPosExp = 26, RULE_seatByPosExp = 27, RULE_integer = 28, RULE_electExp = 29, 
		RULE_voteExp = 30, RULE_passType = 31, RULE_constantExp = 32, RULE_voteSumExp = 33, 
		RULE_voteSumUniqueExp = 34, RULE_passSymbVar = 35, RULE_passPosition = 36, 
		RULE_passByPos = 37, RULE_symbolicVarExp = 38;
	public static final String[] ruleNames = {
		"booleanExpList", "booleanExpListElement", "votingListChangeExp", "votingListChangeContent", 
		"votingTupelChangeExp", "candidateListChangeExp", "booleanExp", "binaryRelationExp", 
		"addedContentExp", "notEmptyExp", "notEmptyContent", "voteEquivalents", 
		"concatenationExp", "splitExp", "permutationExp", "intersectExp", "intersectContent", 
		"tuple", "tupleContent", "quantorExp", "notExp", "comparisonExp", "typeExp", 
		"numberExpression", "typeByPosExp", "voterByPosExp", "candByPosExp", "seatByPosExp", 
		"integer", "electExp", "voteExp", "passType", "constantExp", "voteSumExp", 
		"voteSumUniqueExp", "passSymbVar", "passPosition", "passByPos", "symbolicVarExp"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "','", "':'", "'!'", "'VOTER_AT_POS'", "'CAND_AT_POS'", "'SEAT_AT_POS'", 
		"'V'", "'C'", "'S'", null, null, "'++'", "'INTERSECT'", null, null, "'NOTEMPTY'", 
		null, null, "')'", "'('", null, "'SPLIT'", "'PERM'", "'<-'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, "Mult", 
		"Add", "Concatenate", "Intersect", "Vote", "Elect", "NotEmpty", "Votesum", 
		"VotesumUnique", "ClosedBracket", "OpenBracket", "Quantor", "Split", "Permutation", 
		"ValueAssign", "ComparisonSymbol", "BinaryRelationSymbol", "Integer", 
		"Identifier", "Whitespace", "Newline", "BlockComment", "LineComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FormalPropertyDescription.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FormalPropertyDescriptionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class BooleanExpListContext extends ParserRuleContext {
		public List<BooleanExpListElementContext> booleanExpListElement() {
			return getRuleContexts(BooleanExpListElementContext.class);
		}
		public BooleanExpListElementContext booleanExpListElement(int i) {
			return getRuleContext(BooleanExpListElementContext.class,i);
		}
		public BooleanExpListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanExpList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).enterBooleanExpList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).exitBooleanExpList(this);
		}
	}

	public final BooleanExpListContext booleanExpList() throws RecognitionException {
		BooleanExpListContext _localctx = new BooleanExpListContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_booleanExpList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << Intersect) | (1L << Vote) | (1L << Elect) | (1L << NotEmpty) | (1L << Votesum) | (1L << VotesumUnique) | (1L << OpenBracket) | (1L << Quantor) | (1L << Integer) | (1L << Identifier))) != 0)) {
				{
				{
				setState(78);
				booleanExpListElement();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanExpListElementContext extends ParserRuleContext {
		public BooleanExpContext booleanExp() {
			return getRuleContext(BooleanExpContext.class,0);
		}
		public VotingListChangeExpContext votingListChangeExp() {
			return getRuleContext(VotingListChangeExpContext.class,0);
		}
		public VotingTupelChangeExpContext votingTupelChangeExp() {
			return getRuleContext(VotingTupelChangeExpContext.class,0);
		}
		public CandidateListChangeExpContext candidateListChangeExp() {
			return getRuleContext(CandidateListChangeExpContext.class,0);
		}
		public BooleanExpListElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanExpListElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).enterBooleanExpListElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).exitBooleanExpListElement(this);
		}
	}

	public final BooleanExpListElementContext booleanExpListElement() throws RecognitionException {
		BooleanExpListElementContext _localctx = new BooleanExpListElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_booleanExpListElement);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				booleanExp();
				setState(85);
				match(T__0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				votingListChangeExp();
				setState(88);
				match(T__0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				votingTupelChangeExp();
				setState(91);
				match(T__0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				candidateListChangeExp();
				setState(94);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VotingListChangeExpContext extends ParserRuleContext {
		public TerminalNode Vote() { return getToken(FormalPropertyDescriptionParser.Vote, 0); }
		public TerminalNode ValueAssign() { return getToken(FormalPropertyDescriptionParser.ValueAssign, 0); }
		public VotingListChangeContentContext votingListChangeContent() {
			return getRuleContext(VotingListChangeContentContext.class,0);
		}
		public VotingListChangeExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_votingListChangeExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).enterVotingListChangeExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).exitVotingListChangeExp(this);
		}
	}

	public final VotingListChangeExpContext votingListChangeExp() throws RecognitionException {
		VotingListChangeExpContext _localctx = new VotingListChangeExpContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_votingListChangeExp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(Vote);
			setState(99);
			match(ValueAssign);
			setState(100);
			votingListChangeContent();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VotingListChangeContentContext extends ParserRuleContext {
		public ConcatenationExpContext concatenationExp() {
			return getRuleContext(ConcatenationExpContext.class,0);
		}
		public PermutationExpContext permutationExp() {
			return getRuleContext(PermutationExpContext.class,0);
		}
		public VotingListChangeContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_votingListChangeContent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).enterVotingListChangeContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).exitVotingListChangeContent(this);
		}
	}

	public final VotingListChangeContentContext votingListChangeContent() throws RecognitionException {
		VotingListChangeContentContext _localctx = new VotingListChangeContentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_votingListChangeContent);
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				concatenationExp();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				permutationExp();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VotingTupelChangeExpContext extends ParserRuleContext {
		public TupleContext tuple() {
			return getRuleContext(TupleContext.class,0);
		}
		public TerminalNode ValueAssign() { return getToken(FormalPropertyDescriptionParser.ValueAssign, 0); }
		public SplitExpContext splitExp() {
			return getRuleContext(SplitExpContext.class,0);
		}
		public VotingTupelChangeExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_votingTupelChangeExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).enterVotingTupelChangeExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).exitVotingTupelChangeExp(this);
		}
	}

	public final VotingTupelChangeExpContext votingTupelChangeExp() throws RecognitionException {
		VotingTupelChangeExpContext _localctx = new VotingTupelChangeExpContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_votingTupelChangeExp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			tuple();
			setState(107);
			match(ValueAssign);
			setState(108);
			splitExp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CandidateListChangeExpContext extends ParserRuleContext {
		public TerminalNode Elect() { return getToken(FormalPropertyDescriptionParser.Elect, 0); }
		public TerminalNode ValueAssign() { return getToken(FormalPropertyDescriptionParser.ValueAssign, 0); }
		public IntersectExpContext intersectExp() {
			return getRuleContext(IntersectExpContext.class,0);
		}
		public CandidateListChangeExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_candidateListChangeExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).enterCandidateListChangeExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).exitCandidateListChangeExp(this);
		}
	}

	public final CandidateListChangeExpContext candidateListChangeExp() throws RecognitionException {
		CandidateListChangeExpContext _localctx = new CandidateListChangeExpContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_candidateListChangeExp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(Elect);
			setState(111);
			match(ValueAssign);
			setState(112);
			intersectExp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanExpContext extends ParserRuleContext {
		public QuantorExpContext quantorExp() {
			return getRuleContext(QuantorExpContext.class,0);
		}
		public NotEmptyExpContext notEmptyExp() {
			return getRuleContext(NotEmptyExpContext.class,0);
		}
		public IntersectExpContext intersectExp() {
			return getRuleContext(IntersectExpContext.class,0);
		}
		public BinaryRelationExpContext binaryRelationExp() {
			return getRuleContext(BinaryRelationExpContext.class,0);
		}
		public NotExpContext notExp() {
			return getRuleContext(NotExpContext.class,0);
		}
		public ComparisonExpContext comparisonExp() {
			return getRuleContext(ComparisonExpContext.class,0);
		}
		public TerminalNode OpenBracket() { return getToken(FormalPropertyDescriptionParser.OpenBracket, 0); }
		public BooleanExpContext booleanExp() {
			return getRuleContext(BooleanExpContext.class,0);
		}
		public TerminalNode ClosedBracket() { return getToken(FormalPropertyDescriptionParser.ClosedBracket, 0); }
		public BooleanExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).enterBooleanExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).exitBooleanExp(this);
		}
	}

	public final BooleanExpContext booleanExp() throws RecognitionException {
		BooleanExpContext _localctx = new BooleanExpContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_booleanExp);
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				quantorExp();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				notEmptyExp();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				intersectExp();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				binaryRelationExp(0);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(118);
				notExp();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(119);
				comparisonExp();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(120);
				match(OpenBracket);
				setState(121);
				booleanExp();
				setState(122);
				match(ClosedBracket);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryRelationExpContext extends ParserRuleContext {
		public QuantorExpContext quantorExp() {
			return getRuleContext(QuantorExpContext.class,0);
		}
		public TerminalNode BinaryRelationSymbol() { return getToken(FormalPropertyDescriptionParser.BinaryRelationSymbol, 0); }
		public BooleanExpContext booleanExp() {
			return getRuleContext(BooleanExpContext.class,0);
		}
		public NotExpContext notExp() {
			return getRuleContext(NotExpContext.class,0);
		}
		public ComparisonExpContext comparisonExp() {
			return getRuleContext(ComparisonExpContext.class,0);
		}
		public NotEmptyExpContext notEmptyExp() {
			return getRuleContext(NotEmptyExpContext.class,0);
		}
		public IntersectExpContext intersectExp() {
			return getRuleContext(IntersectExpContext.class,0);
		}
		public BinaryRelationExpContext binaryRelationExp() {
			return getRuleContext(BinaryRelationExpContext.class,0);
		}
		public BinaryRelationExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryRelationExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).enterBinaryRelationExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).exitBinaryRelationExp(this);
		}
	}

	public final BinaryRelationExpContext binaryRelationExp() throws RecognitionException {
		return binaryRelationExp(0);
	}

	private BinaryRelationExpContext binaryRelationExp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		BinaryRelationExpContext _localctx = new BinaryRelationExpContext(_ctx, _parentState);
		BinaryRelationExpContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_binaryRelationExp, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(127);
				quantorExp();
				setState(128);
				match(BinaryRelationSymbol);
				setState(129);
				booleanExp();
				}
				break;
			case 2:
				{
				setState(131);
				notExp();
				setState(132);
				match(BinaryRelationSymbol);
				setState(133);
				booleanExp();
				}
				break;
			case 3:
				{
				setState(135);
				comparisonExp();
				setState(136);
				match(BinaryRelationSymbol);
				setState(137);
				booleanExp();
				}
				break;
			case 4:
				{
				setState(139);
				notEmptyExp();
				setState(140);
				match(BinaryRelationSymbol);
				setState(141);
				booleanExp();
				}
				break;
			case 5:
				{
				setState(143);
				intersectExp();
				setState(144);
				match(BinaryRelationSymbol);
				setState(145);
				booleanExp();
				}
				break;
			case 6:
				{
				setState(147);
				match(OpenBracket);
				setState(148);
				binaryRelationExp(0);
				setState(149);
				match(ClosedBracket);
				setState(150);
				match(BinaryRelationSymbol);
				setState(151);
				booleanExp();
				}
				break;
			case 7:
				{
				setState(153);
				match(OpenBracket);
				setState(154);
				quantorExp();
				setState(155);
				match(ClosedBracket);
				setState(156);
				match(BinaryRelationSymbol);
				setState(157);
				booleanExp();
				}
				break;
			case 8:
				{
				setState(159);
				match(OpenBracket);
				setState(160);
				notExp();
				setState(161);
				match(ClosedBracket);
				setState(162);
				match(BinaryRelationSymbol);
				setState(163);
				booleanExp();
				}
				break;
			case 9:
				{
				setState(165);
				match(OpenBracket);
				setState(166);
				comparisonExp();
				setState(167);
				match(ClosedBracket);
				setState(168);
				match(BinaryRelationSymbol);
				setState(169);
				booleanExp();
				}
				break;
			case 10:
				{
				setState(171);
				match(OpenBracket);
				setState(172);
				notEmptyExp();
				setState(173);
				match(ClosedBracket);
				setState(174);
				match(BinaryRelationSymbol);
				setState(175);
				booleanExp();
				}
				break;
			case 11:
				{
				setState(177);
				match(OpenBracket);
				setState(178);
				intersectExp();
				setState(179);
				match(ClosedBracket);
				setState(180);
				match(BinaryRelationSymbol);
				setState(181);
				booleanExp();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(190);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new BinaryRelationExpContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_binaryRelationExp);
					setState(185);
					if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
					setState(186);
					match(BinaryRelationSymbol);
					setState(187);
					booleanExp();
					}
					} 
				}
				setState(192);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AddedContentExpContext extends ParserRuleContext {
		public NotEmptyExpContext notEmptyExp() {
			return getRuleContext(NotEmptyExpContext.class,0);
		}
		public IntersectExpContext intersectExp() {
			return getRuleContext(IntersectExpContext.class,0);
		}
		public AddedContentExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addedContentExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).enterAddedContentExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).exitAddedContentExp(this);
		}
	}

	public final AddedContentExpContext addedContentExp() throws RecognitionException {
		AddedContentExpContext _localctx = new AddedContentExpContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_addedContentExp);
		try {
			setState(195);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NotEmpty:
				enterOuterAlt(_localctx, 1);
				{
				setState(193);
				notEmptyExp();
				}
				break;
			case Intersect:
				enterOuterAlt(_localctx, 2);
				{
				setState(194);
				intersectExp();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotEmptyExpContext extends ParserRuleContext {
		public TerminalNode NotEmpty() { return getToken(FormalPropertyDescriptionParser.NotEmpty, 0); }
		public NotEmptyContentContext notEmptyContent() {
			return getRuleContext(NotEmptyContentContext.class,0);
		}
		public NotEmptyExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notEmptyExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).enterNotEmptyExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormalPropertyDescriptionListener ) ((FormalPropertyDescriptionListener)listener).exitNotEmptyExp(this);
		}
	}
